flux/apps/ext/authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: authelia/authelia:4
          volumeMounts:
            - name: authelia-databases
              mountPath: /databases
            - name: configuration
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: authelia-users
              mountPath: /usersdata
              readOnly: true
          ports:
            - containerPort: 9091
      volumes:
        - name: configuration
          configMap:
            name: authelia
        - name: authelia-users
          configMap:
            name: authelia-users
        - name: authelia-databases
          emptyDir: {}
