flux/apps/ext/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik-ext
  hostnames:
    - "auth.fingol.pro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"   # Matches all requests to auth.test.com
      backendRefs:
        - name: authelia
          port: 9091
